secp-integration-test/pom.xml, build.yml: enable/run native integration tests